added singup page and their validation added few routes

--- a/src/app/feature/auth/forgot-password/forgot-password.component.html
+++ b/src/app/feature/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,18 @@
-<p>forgot-password works!</p>
+<div class="main-container">
+    <form [formGroup]="forgotPwdForm" (ngSubmit)="onSubmit()">
+        <mat-card class="main-card">
+            <h1>Forgot password</h1>
+            <mat-form-field appearance="fill">
+                <mat-label>Enter your email</mat-label>
+                <input matInput placeholder="email@example.com" formControlName="email" required />
+                <mat-error *ngIf="this.forgotPwdForm.get('email')?.invalid">Invalid Email</mat-error>
+            </mat-form-field>
+            <button mat-raised-button color="primary" type="submit" [disabled]="this.forgotPwdForm.invalid">Send reset
+                password link</button>
+            <div class="back-login-btn">
+                <button routerLink="../login" mat-button color="primary" type="button" class="signup-btn">Login
+                    Page</button>
+            </div>
+        </mat-card>
+    </form>
+</div>
