--- a/src/app/feature/auth/login/login.component.scss
+++ b/src/app/feature/auth/login/login.component.scss
@@ -11,3 +11,15 @@
     
     // transform: translate(-50%, 50%);
 }
+
+.forgot-text {
+    text-align: right;
+    margin-top: -16px;
+    margin-bottom: 10px;
+    font-size: x-small;
+    z-index: 300;
+}
+.signup-btn {
+    margin: 20px 0px;
+    width: 100%;
+}
