--- a/src/app/feature/auth/signup/signup.component.html
+++ b/src/app/feature/auth/signup/signup.component.html
@@ -1,1 +1,82 @@
-<p>signup works!</p>
+<div class="main-container">
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <mat-card class="main-card">
+            <h1>Signup</h1>
+            <div class="row">
+                <mat-form-field appearance="fill">
+                    <mat-label>First name</mat-label>
+                    <input matInput placeholder="Ex. Tarique" formControlName="firstName" required />
+                    <mat-error *ngIf="this.signupForm.get('firstName')?.invalid">Invalid firstname</mat-error>
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Last name</mat-label>
+                    <input matInput placeholder="Ex. Akhtar" formControlName="lastName" required />
+                    <mat-error *ngIf="this.signupForm.get('lastName')?.invalid">Invalid lastname</mat-error>
+                </mat-form-field>
+            </div>
+            <div class="row">
+                <mat-form-field appearance="fill" class="mat-form-width">
+                    <mat-label>Email</mat-label>
+                    <input matInput placeholder="email@example.com" formControlName="email" required />
+                    <mat-error *ngIf="this.signupForm.get('email')?.invalid">Invalid Email</mat-error>
+                </mat-form-field>
+            </div>
+
+            <div class="row">
+                <mat-form-field appearance="fill">
+                    <mat-label>Password</mat-label>
+                    <input matInput placeholder="test@!#$12" formControlName="password" type="password" required />
+                    <mat-error *ngIf="this.signupForm.get('password')?.invalid">password length must be between [6-20]
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Confirm Password</mat-label>
+                    <input matInput placeholder="test@!#$12" formControlName="confirmPassword" type="password"
+                        required />
+                    <mat-error *ngIf="this.signupForm.get('confirmPassword')?.invalid">password length must be between
+                        [6-20]
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div formGroupName="address">
+                <div class="row">
+                    <mat-form-field appearance="fill" class="mat-form-width">
+                        <mat-label>Street address</mat-label>
+                        <input matInput placeholder="Ex. MIG 8/5 RDA Building Mahtab Road"
+                            formControlName="streetAddress" required />
+                        <mat-error *ngIf="this.signupForm.get('streetAddress')?.invalid">Invalid firstname</mat-error>
+                    </mat-form-field>
+                </div>
+
+                <div class="row">
+                    <mat-form-field appearance="fill">
+                        <mat-label>City</mat-label>
+                        <input matInput placeholder="Ex. Rourkela" formControlName="city" required />
+                        <mat-error *ngIf="this.signupForm.get('city')?.invalid">Invalid city</mat-error>
+                    </mat-form-field>
+                    <mat-form-field appearance="fill">
+                        <mat-label>State</mat-label>
+                        <input matInput placeholder="Ex. Odisha" formControlName="state" required />
+                        <mat-error *ngIf="this.signupForm.get('state')?.invalid">Invalid state</mat-error>
+                    </mat-form-field>
+                </div>
+
+                <div class="row">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Zipcode</mat-label>
+                        <input matInput placeholder="Ex. 769001" formControlName="zipcode" required />
+                        <mat-error *ngIf="this.signupForm.get('zipcode')?.invalid">Invalid zipcode</mat-error>
+                    </mat-form-field>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Country</mat-label>
+                        <input matInput placeholder="Ex. India" formControlName="country" required />
+                        <mat-error *ngIf="this.signupForm.get('country')?.invalid">Invalid country name</mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <button mat-raised-button color="primary" type="submit" [disabled]="this.signupForm.invalid">Signup</button>
+
+        </mat-card>
+    </form>
+</div>
