--- a/src/app/feature/auth/login/login.component.html
+++ b/src/app/feature/auth/login/login.component.html
@@ -15,7 +15,7 @@
       <div class="forgot-text"><a routerLink="../forgot-password">Forgot password</a></div>
       <button mat-raised-button color="primary" type="submit" [disabled]="this.loginForm.invalid">Login</button>
       <div>
-        <button routerLink="../signup" mat-button color="primary" type="button" class="signup-btn">Signup</button>
+        <button routerLink="../signup" mat-button color="primary" type="button" class="btn">Signup</button>
       </div>
     </mat-card>
   </form>
