--- a/src/app/feature/auth/signup/signup.component.html
+++ b/src/app/feature/auth/signup/signup.component.html
@@ -76,6 +76,9 @@
             </div>
 
             <button mat-raised-button color="primary" type="submit" [disabled]="this.signupForm.invalid">Signup</button>
+            <button mat-raised-button color="primary" type="button" class="btn" routerLink="../login">Already
+                have an
+                account</button>
 
         </mat-card>
     </form>
