--- a/src/app/feature/auth/signup/signup.component.scss
+++ b/src/app/feature/auth/signup/signup.component.scss
@@ -1,34 +1,36 @@
 .main-container {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .main-card {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    
-    // transform: translate(-50%, 50%);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+
+  // transform: translate(-50%, 50%);
 }
 
 .forgot-text {
-    text-align: right;
-    margin-top: -16px;
-    margin-bottom: 10px;
-    font-size: x-small;
-    z-index: 300;
+  text-align: right;
+  margin-top: -16px;
+  margin-bottom: 10px;
+  font-size: x-small;
+  z-index: 300;
 }
-.signup-btn {
-    margin: 20px 0px;
-    width: 100%;
+.btn {
+  margin: 20px 0px;
+  width: 100%;
 }
 
 .row {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .mat-form-width {
-    width: 100%;
+  width: 100%;
 }
