--- a/src/app/feature/product/dashboard/dashboard.component.scss
+++ b/src/app/feature/product/dashboard/dashboard.component.scss
@@ -1,3 +1,12 @@
 .example-spacer {
-    flex: 1 1 auto;
+  flex: 1 1 auto;
+}
+
+.container {
+  padding-top: 30px;
+  max-width: 1248px;
+  margin: 0 auto;
+  mat-form-field {
+    width: 100%;
   }
+}
